web-infras/parser/tests/fixtures/babel/core/uncategorised/511/output.txt
[SyntaxError]: unexpect keyword in strict mode (1,16)
1|function hello(static) { "use strict"; }
 |              ^
